k8s/kyverno/namespace-argo-cd.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "kyverno"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
