k8s/kyverno/validating-policy-requests-limits-audit.yaml
---
apiVersion: "policies.kyverno.io/v1"
kind: "ValidatingPolicy"
metadata:
  name: "requests-limits-audit"
spec:
  validationActions:
    - "Audit"
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - "v1"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "pods"
  variables:
    - name: "containers"
      expression: >-
        object.spec.containers
        + object.spec.?initContainers.orValue([])
        + object.spec.?ephemeralContainers.orValue([])
  validations:
    - messageExpression: >-
        "CPU request must be set for all containers. Offending containers: " +
        variables.containers.filter(container, !container.?resources.?requests.?cpu.hasValue()).map(container, container.name).join(", ")
      expression: >-
        variables.containers.all(container,
          container.?resources.?requests.?cpu.hasValue()
        )
    - messageExpression: >-
        "Memory request must be set for all containers. Offending containers: " +
        variables.containers.filter(container, !container.?resources.?requests.?memory.hasValue()).map(container, container.name).join(", ")
      expression: >-
        variables.containers.all(container,
          container.?resources.?requests.?memory.hasValue()
        )
    # TODO: Uncomment after https://github.com/argoproj/argo-cd/issues/25240 is resolved
    # - messageExpression: >-
    #     "CPU limit must not be set. Offending containers: " +
    #     variables.containers.filter(container, container.?resources.?limits.?cpu.hasValue()).map(container, container.name).join(", ")
    #   expression: >-
    #     variables.containers.all(container,
    #       !container.?resources.?limits.?cpu.hasValue()
    #     )
    - messageExpression: >-
        "Memory limit must be set for all containers. Offending containers: " +
        variables.containers.filter(container, !container.?resources.?limits.?memory.hasValue()).map(container, container.name).join(", ")
      expression: >-
        variables.containers.all(container,
          container.?resources.?limits.?memory.hasValue()
        )
    - messageExpression: >-
        "Memory request and limit must be equal. Offending containers: " +
        variables.containers.filter(container,
          container.?resources.?requests.?memory.hasValue() && container.?resources.?limits.?memory.hasValue() &&
          container.resources.requests.memory != container.resources.limits.memory
        ).map(container, container.name + " (request=" + container.resources.requests.memory + ", limit=" + container.resources.limits.memory + ")").join(", ")
      expression: >-
        variables.containers.all(container,
          !(container.?resources.?requests.?memory.hasValue() && container.?resources.?limits.?memory.hasValue()) ||
          container.resources.requests.memory == container.resources.limits.memory
        )
